--- a/premios-esland/src/pages/index.astro
+++ b/premios-esland/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Video from '../components/Video.astro'
+import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout
+	title="Welcome to Astro."
+	description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+>
+	<Video />
 	<main></main>
 </Layout>
