--- a/premios-esland/src/pages/index.astro
+++ b/premios-esland/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Intro from '../components/Intro.astro'
 import Video from '../components/Video.astro'
 import Layout from '../layouts/Layout.astro'
 ---
@@ -8,5 +9,7 @@ import Layout from '../layouts/Layout.astro'
 	description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
 >
 	<Video />
-	<main></main>
+	<main>
+		<Intro />
+	</main>
 </Layout>
