🎨 Feat: formated code

--- a/premios-esland/src/components/Intro.astro
+++ b/premios-esland/src/components/Intro.astro
@@ -9,9 +9,11 @@ import esland from '../../public/eslandLogo.svg'
 		Bienvenidos/as <br /> a los Premios ESLAND
 	</h1>
 	<p class="text-default">
-		El cine tiene los Oscars, la música tiene los Grammy y <strong>el streaming tiene los ESLAND.</strong> Los
-		premios que celebran la creatividad y el talento de los mejores creadores de contenido de <strong>la
-      comunidad hispanohablante.</strong>
+		El cine tiene los Oscars, la música tiene los Grammy y <strong
+			>el streaming tiene los ESLAND.</strong
+		> Los premios que celebran la creatividad y el talento de los mejores creadores de contenido de <strong
+			>la comunidad hispanohablante.</strong
+		>
 	</p>
 	<p class="text-default">
 		España, Latinoamérica y Andorra unidas por creadores, creadoras y sus comunidades, para recordar
@@ -19,6 +21,8 @@ import esland from '../../public/eslandLogo.svg'
 	</p>
 	<p class="text-default">
 		Tras dos galas celebradas, una en el Palau de la Música Catalana de Barcelona, y otra en el
-		Auditorio Nacional de la Ciudad de México, solo queda esperar a <strong>la tercera edición en Andorra.</strong>
+		Auditorio Nacional de la Ciudad de México, solo queda esperar a <strong
+			>la tercera edición en Andorra.</strong
+		>
 	</p>
 </section>
