--- a/premios-esland/src/layouts/Layout.astro
+++ b/premios-esland/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ interface Props {
 	description: string
 }
 const { title, description } = Astro.props
-import '@fontsource-variable/onest';
+import '@fontsource-variable/onest'
 ---
 
 <!doctype html>
@@ -26,7 +26,7 @@ import '@fontsource-variable/onest';
 		color-scheme: dark;
 	}
 	html {
-		font-family: 'Onest Variable' ,system-ui, sans-serif;
+		font-family: 'Onest Variable', system-ui, sans-serif;
 		background: #151a36;
 	}
 
