--- a/premios-esland/src/components/Video.astro
+++ b/premios-esland/src/components/Video.astro
@@ -10,12 +10,12 @@ import eslandHero from '../../public/eslandHero.svg'
 		class="absolute left-0 right-0 top-10 z-10 m-auto w-[1000px]"
 	/>
 	<video
-		class="animate-fade animate-duration-[4000ms] animate-ease-in-out h-screen w-full object-cover object-top"
+		class="h-screen w-full animate-fade object-cover object-top animate-duration-[4000ms] animate-ease-in-out"
 		muted
 		loop
 		autoplay
-		src="./video.mp4"
+		src="./video.webm"
 		style="clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
   "></video>
-	<video class="absolute -bottom-48 -z-40 blur-3xl" muted autoplay loop src="./video.mp4"></video>
+	<video class="absolute -bottom-48 -z-40 blur-3xl" muted autoplay loop src="./video.webm"></video>
 </div>
