🚧 Feat: index page (bento component)

--- a/premios-esland/src/pages/index.astro
+++ b/premios-esland/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Bento from '../components/Bento.astro'
 import Intro from '../components/Intro.astro'
 import Video from '../components/Video.astro'
 import Layout from '../layouts/Layout.astro'
@@ -11,5 +12,6 @@ import Layout from '../layouts/Layout.astro'
 	<Video />
 	<main>
 		<Intro />
+		<Bento />
 	</main>
 </Layout>
