--- a/premios-esland/src/components/Bento.astro
+++ b/premios-esland/src/components/Bento.astro
@@ -10,7 +10,7 @@ import BentoItem from './BentoItem.astro'
 	>
 		<div
 			slot="image"
-			class="transition-scale absolute bottom-0 left-0 top-0 -z-10 h-full w-full bg-blue-950 bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
+			class="absolute bottom-0 left-0 top-0 -z-10 h-full w-full bg-blue-950 bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
 			style="background-image: url('/andorraMountain.webp')"
 		>
 		</div>
