--- a/premios-esland/src/components/BentoItem.astro
+++ b/premios-esland/src/components/BentoItem.astro
@@ -10,7 +10,6 @@ const { className, title, subtitle } = Astro.props
 <article
 	class={`
   ${className}
-  col-span-5
   relative rounded-xl
   backdrop-blur-md
   border border-black/10
@@ -21,7 +20,7 @@ const { className, title, subtitle } = Astro.props
 >
 	<div
 		class="absolute bottom-0 top-0 z-10 h-full w-full
-    bg-gradient-to-b from-transparent from-40% via-[#151836]/50 to-[#151836]/80"
+    bg-gradient-to-b from-transparent from-40% via-[#161931]/25 to-black/75"
 	>
 	</div>
 
