--- a/premios-esland/src/pages/index.astro
+++ b/premios-esland/src/pages/index.astro
@@ -1,17 +1,19 @@
 ---
 import Bento from '../components/Bento.astro'
 import Intro from '../components/Intro.astro'
+import PreFooter from '../components/PreFooter.astro'
 import Video from '../components/Video.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout
-	title="Welcome to Astro."
-	description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+	title="Premios ESLAND"
+	description="Descubre a los mejores creadores de contenido de España, Latinoamérica y Andorra. ¡Vota por tus favoritos! Celebra la innovación y el talento de Twitch, YouTube y más."
 >
 	<Video />
 	<main>
 		<Intro />
 		<Bento />
+		<PreFooter />
 	</main>
 </Layout>
