--- a/premios-esland/src/components/BentoItem.astro
+++ b/premios-esland/src/components/BentoItem.astro
@@ -2,7 +2,7 @@
 interface Props {
 	title: string
 	className?: string
-	subtitle: string
+	subtitle?: string
 }
 const { className, title, subtitle } = Astro.props
 ---
