--- a/premios-esland/src/components/Header.astro
+++ b/premios-esland/src/components/Header.astro
@@ -1,19 +1,32 @@
-<header class="fixed top-0 z-10 w-screen px-8 py-4 backdrop-blur-sm lg:px-0">
+---
+import { getI18N } from '../i18n'
+const { currentLocale } = Astro
+const i18N = getI18N({ currentLocale })
+---
+
+<header class="fixed top-0 z-50 w-screen px-8 py-2 backdrop-blur-sm lg:px-0">
 	<div class="mx-auto grid max-w-7xl grid-cols-3 items-center justify-between">
 		<a href="/" class="col-span-1">
-			<img src="/eslandLogo.svg" width="50" alt="Esland" />
+			<img src="/eslandLogo.svg" width="40" alt="Esland" />
 		</a>
 		<nav class="col-span-1 justify-self-center">
 			<ul class="flex gap-4">
-				<li>INFO</li>
-				<li>ARCHIVO</li>
+				<li>
+					<a class="hover:underline" href="#">{i18N.HEADER_VOTE}</a>
+				</li>
+				<li>
+					<a class="hover:underline" href="#">{i18N.HEADER_INFO}</a>
+				</li>
+				<li>
+					<a class="hover:underline" href="#">{i18N.HEADER_ARCHIVE}</a>
+				</li>
 			</ul>
 		</nav>
 		<a
 			href="#"
 			class="inline-block justify-self-end rounded-full border border-white px-4 py-2 duration-300 hover:bg-white hover:text-black"
 		>
-			ESLAND: EL DOCUMENTAL
+			{i18N.HEADER_BUTTON}
 		</a>
 	</div>
 </header>
