--- a/premios-esland/src/components/Intro.astro
+++ b/premios-esland/src/components/Intro.astro
@@ -1,28 +1,20 @@
 ---
 import { Image } from 'astro:assets'
 import esland from '../../public/eslandLogo.svg'
+
+import { getI18N } from '../i18n'
+const { currentLocale } = Astro
+const i18N = getI18N({ currentLocale })
 ---
 
 <section class="mx-auto my-24 max-w-[70ch] text-pretty px-20 text-left text-xl">
 	<Image src={esland} alt="Logo de los Esland" class="m-auto mb-10 w-16" />
 	<h1 class="mx-auto mb-10 text-wrap text-center text-4xl font-semibold tracking-wide">
-		Bienvenidos/as <br /> a los Premios ESLAND
+		{i18N.INTRO_TITLE}
+		<br />
+		{i18N.INTRO_TITLE_AFTER_BR}
 	</h1>
-	<p class="text-default">
-		El cine tiene los Oscars, la música tiene los Grammy y <strong
-			>el streaming tiene los ESLAND.</strong
-		> Los premios que celebran la creatividad y el talento de los mejores creadores de contenido de <strong
-			>la comunidad hispanohablante.</strong
-		>
-	</p>
-	<p class="text-default">
-		España, Latinoamérica y Andorra unidas por creadores, creadoras y sus comunidades, para recordar
-		y revivir <strong>algunos de los mejores momentos del año.</strong>
-	</p>
-	<p class="text-default">
-		Tras dos galas celebradas, una en el Palau de la Música Catalana de Barcelona, y otra en el
-		Auditorio Nacional de la Ciudad de México, solo queda esperar a <strong
-			>la tercera edición en Andorra.</strong
-		>
-	</p>
+	<p class="text-default" set:html={i18N.INTRO_DESCRIPTION_1} />
+	<p class="text-default" set:html={i18N.INTRO_DESCRIPTION_2} />
+	<p class="text-default" set:html={i18N.INTRO_DESCRIPTION_3} />
 </section>
