--- a/premios-esland/src/pages/index.astro
+++ b/premios-esland/src/pages/index.astro
@@ -1,19 +1,5 @@
 ---
-import Bento from '../components/Bento.astro'
-import Intro from '../components/Intro.astro'
-import PreFooter from '../components/PreFooter.astro'
-import Video from '../components/Video.astro'
-import Layout from '../layouts/Layout.astro'
+import App from '../components/App.astro'
 ---
 
-<Layout
-	title="Premios ESLAND"
-	description="Descubre a los mejores creadores de contenido de España, Latinoamérica y Andorra. ¡Vota por tus favoritos! Celebra la innovación y el talento de Twitch, YouTube y más."
->
-	<Video />
-	<main>
-		<Intro />
-		<Bento />
-		<PreFooter />
-	</main>
-</Layout>
+<App />
