--- a/premios-esland/src/components/Bento.astro
+++ b/premios-esland/src/components/Bento.astro
@@ -6,8 +6,10 @@ const { currentLocale } = Astro
 const i18N = getI18N({ currentLocale })
 ---
 
-<section class="mx-auto grid w-full max-w-[1400px] auto-rows-[30rem] grid-cols-10 gap-4 p-20">
-	<BentoItem className="col-span-10 md:col-span-4" title={i18N.BENTO_TITLE_1}>
+<section
+	class="mx-auto grid w-full max-w-[1400px] auto-rows-[30rem] gap-4 p-6 md:p-12 lg:grid-cols-10 lg:p-20"
+>
+	<BentoItem className="col-span-10 lg:col-span-4" title={i18N.BENTO_TITLE_1}>
 		<div
 			slot="image"
 			class="absolute bottom-0 left-0 top-0 -z-10 h-full w-full bg-blue-950 bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
@@ -17,7 +19,7 @@ const i18N = getI18N({ currentLocale })
 		<p slot="content" class="text-default max-w-xl" set:html={i18N.BENTO_CONTENT_1} />
 	</BentoItem>
 	<BentoItem
-		className="col-span-10 md:col-span-6"
+		className="col-span-10 lg:col-span-6"
 		title={i18N.BENTO_TITLE_2}
 		subtitle={i18N.BENTO_SUBTITLE_2}
 	>
@@ -32,7 +34,7 @@ const i18N = getI18N({ currentLocale })
 		</div>
 	</BentoItem>
 	<BentoItem
-		className="col-span-10 md:col-span-6"
+		className="col-span-10 lg:col-span-6"
 		title={i18N.BENTO_TITLE_3}
 		subtitle={i18N.BENTO_SUBTITLE_3}
 	>
@@ -44,7 +46,7 @@ const i18N = getI18N({ currentLocale })
 		>
 		</div>
 	</BentoItem>
-	<BentoItem className="col-span-10 md:col-span-4" title={i18N.BENTO_TITLE_4}>
+	<BentoItem className="col-span-10 lg:col-span-4" title={i18N.BENTO_TITLE_4}>
 		<p class="text-default" slot="content" set:html={i18N.BENTO_CONTENT_4} />
 		<div
 			slot="image"
