💄 Feat: header animation

--- a/premios-esland/src/components/Header.astro
+++ b/premios-esland/src/components/Header.astro
@@ -4,7 +4,7 @@ const { currentLocale } = Astro
 const i18N = getI18N({ currentLocale })
 ---
 
-<header class="fixed top-0 z-50 w-screen px-8 py-2 backdrop-blur-sm lg:px-0">
+<header class="header-nav fixed top-0 z-50 w-screen px-8 py-3 lg:px-0">
 	<div class="mx-auto grid max-w-7xl grid-cols-3 items-center justify-between">
 		<a href="/" class="col-span-1">
 			<img src="/eslandLogo.svg" width="40" alt="Esland" />
