--- a/premios-esland/src/layouts/Layout.astro
+++ b/premios-esland/src/layouts/Layout.astro
@@ -3,13 +3,15 @@ interface Props {
 	title: string
 	description: string
 }
-const { title, description } = Astro.props
 import '@fontsource-variable/onest'
 import Header from '../components/Header.astro'
+
+const { title, description } = Astro.props
+const { currentLocale } = Astro
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={currentLocale}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
@@ -38,5 +40,21 @@ import Header from '../components/Header.astro'
 
 	.text-default strong {
 		@apply font-bold text-white;
+	}
+
+	.header-nav {
+		animation: blur linear both;
+		animation-timeline: scroll();
+		animation-range: 0 500px;
+	}
+
+	@keyframes blur {
+		to {
+			box-shadow: 
+				0px 5px 50px -5px hsla(0, 0, 0, 0.1),
+				0px 0px 0 1px hsla(0, 0, 0, 0.3);
+			background: rgba(0, 0, 0, 0.3);
+			backdrop-filter: blur(10px);
+		}
 	}
 </style>
