--- a/premios-esland/src/layouts/Layout.astro
+++ b/premios-esland/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ interface Props {
 }
 import '@fontsource-variable/onest'
 import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 
 const { title, description } = Astro.props
 const { currentLocale } = Astro
@@ -23,6 +24,7 @@ const { currentLocale } = Astro
 	<body>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
