--- a/premios-esland/src/components/Header.astro
+++ b/premios-esland/src/components/Header.astro
@@ -1,32 +1,37 @@
 ---
 import { getI18N } from '../i18n'
+import Close from './icons/close.astro'
+import Menu from './icons/menu.astro'
 const { currentLocale } = Astro
 const i18N = getI18N({ currentLocale })
 ---
 
-<header class="header-nav fixed top-0 z-50 w-screen px-8 py-3 lg:px-0">
-	<div class="mx-auto grid max-w-7xl grid-cols-3 items-center justify-between">
-		<a href="/" class="col-span-1">
-			<img src="/eslandLogo.svg" width="40" alt="Esland" />
+<header class="header-nav fixed top-0 z-50 w-full px-6 py-4">
+	<div class="mx-auto flex max-w-7xl items-center justify-between gap-16">
+		<a href="/" class="relative z-10">
+			<img
+				class="absolute m-auto w-10 opacity-0 blur-sm transition-opacity duration-300 hover:opacity-100"
+				src="/eslandLogo.svg"
+				width="40"
+				alt="Esland"
+			/>
+			<img class="w-10" src="/eslandLogo.svg" width="40" alt="Esland" />
 		</a>
-		<nav class="col-span-1 justify-self-center">
-			<ul class="flex gap-4">
-				<li>
-					<a class="hover:underline" href="#">{i18N.HEADER_VOTE}</a>
-				</li>
-				<li>
-					<a class="hover:underline" href="#">{i18N.HEADER_INFO}</a>
-				</li>
-				<li>
-					<a class="hover:underline" href="#">{i18N.HEADER_ARCHIVE}</a>
-				</li>
-			</ul>
-		</nav>
-		<a
-			href="#"
-			class="inline-block justify-self-end rounded-full border border-white px-4 py-2 duration-300 hover:bg-white hover:text-black"
+		<nav
+			id="header-menu"
+			class="fixed inset-0 flex h-dvh w-full -translate-y-full flex-col items-center justify-center gap-8 bg-[#151a36]/90 transition-transform duration-300 target:translate-y-0 md:static md:h-[initial] md:translate-y-[initial] md:flex-row md:bg-[initial] md:text-xl lg:text-xl"
 		>
-			{i18N.HEADER_BUTTON}
-		</a>
+			<a class="hover:underline" href="#">{i18N.HEADER_VOTE}</a>
+			<a class="hover:underline" href="#">{i18N.HEADER_INFO}</a>
+			<a class="hover:underline" href="#">{i18N.HEADER_ARCHIVE}</a>
+			<a
+				class="w-fit rounded-full border border-solid border-white px-3 py-3 text-xs font-medium uppercase no-underline md:ml-auto md:px-5 md:py-2 md:text-xl"
+				href="https://drive.google.com/file/d/1D7IvIqMyqAoG58fuk8bc0JvhAmrWBbOK/view"
+			>
+				{i18N.HEADER_BUTTON}
+			</a>
+			<a href="#" class="absolute right-6 top-6 md:hidden"><Close /></a>
+		</nav>
+		<a href="#header-menu" class="md:hidden"><Menu /></a>
 	</div>
 </header>
