--- a/premios-esland/src/layouts/Layout.astro
+++ b/premios-esland/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ interface Props {
 import '@fontsource-variable/onest'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
+import { ViewTransitions } from 'astro:transitions'
 
 const { title, description } = Astro.props
 const { currentLocale } = Astro
@@ -20,43 +21,52 @@ const { currentLocale } = Astro
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<Header />
 		<slot />
 		<Footer />
-	</body>
-</html>
-<style is:global>
-	:root {
-		color-scheme: dark;
-	}
-	html {
-		font-family: 'Onest Variable', system-ui, sans-serif;
-		background: #151a36;
-	}
-
-	.text-default {
-		@apply mb-4 font-thin leading-6 tracking-wide text-[#ffffe6];
-	}
-
-	.text-default strong {
-		@apply font-bold text-white;
-	}
-
-	.header-nav {
-		animation: blur linear both;
-		animation-timeline: scroll();
-		animation-range: 0 500px;
-	}
-
-	@keyframes blur {
-		to {
-			box-shadow: 
-				0px 5px 50px -5px hsla(0, 0, 0, 0.1),
-				0px 0px 0 1px hsla(0, 0, 0, 0.3);
-			background: rgba(0, 0, 0, 0.3);
-			backdrop-filter: blur(10px);
+	</body><style is:global>
+		:root {
+			color-scheme: dark;
 		}
-	}
-</style>
+		html {
+			font-family: 'Onest Variable', system-ui, sans-serif;
+			background: #151a36;
+		}
+
+		.text-default {
+			@apply mb-4 font-thin leading-6 tracking-wide text-[#ffffe6];
+		}
+
+		.text-default strong {
+			@apply font-bold text-white;
+		}
+
+		.header-nav {
+			animation: blur linear both;
+			animation-timeline: scroll();
+			animation-range: 0 500px;
+		}
+
+		@keyframes blur {
+			to {
+				box-shadow:
+					0px 5px 50px -5px hsla(0, 0, 0, 0.1),
+					0px 0px 0 1px hsla(0, 0, 0, 0.3);
+				background: rgba(0, 0, 0, 0.3);
+				backdrop-filter: blur(10px);
+			}
+		}
+
+		.clip-path {
+			clip-path: polygon(100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+		}
+		@media (min-width: 640px) {
+			.clip-path {
+				clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
+			}
+		}
+	</style>
+</html>
