--- a/premios-esland/src/layouts/Layout.astro
+++ b/premios-esland/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const { currentLocale } = Astro
 			@apply mb-4 font-thin leading-6 tracking-wide text-[#ffffe6];
 		}
 
-		.text-default strong {
+		.text-default .strong {
 			@apply font-bold text-white;
 		}
 
